FIX #comment Refactored Ticket and Attachment styles, Fixed overflowing notification

--- a/src/app/core-layout/state-change-notifications/state-change-notification/state-change-notification.component.scss
+++ b/src/app/core-layout/state-change-notifications/state-change-notification/state-change-notification.component.scss
@@ -58,6 +58,7 @@ $state-change-notification-icon-width: $state-change-notification-icon-font-size
           @include font-size($state-change-notification-message-font-size);
           font-family: $base-font;
           vertical-align: top;
+          word-break: break-all;
         }
       }
     }
